--- a/DigiTriadLab/app/src/main/res/layout/activity_experiment_detail.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_experiment_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,92 +7,111 @@
     android:layout_height="match_parent"
     tools:context=".views.ExperimentDetailActivity">
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
-        <ImageView
-            android:id="@+id/qr_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/copy_experiment" />
+        android:theme="@style/ToolbarTheme"
+        app:liftOnScroll="true"
+        >
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/top_toolbar"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_width="match_parent"
+            />
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/tags"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/small_padding"
-            android:layout_marginStart="@dimen/big_padding"
-            android:layout_marginEnd="@dimen/big_padding"
-            app:layout_constraintTop_toBottomOf="@id/qr_container"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
 
-        </com.google.android.material.chip.ChipGroup>
+            android:orientation="vertical" >
+            <ImageView
+                android:id="@+id/qr_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/copy_experiment" />
 
-        <TextView
-            android:id="@+id/experiment_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/big_padding"
-            android:layout_marginTop="@dimen/big_padding"
-            android:layout_marginEnd="@dimen/big_padding"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tags" />
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/tags"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/small_padding"
+                android:layout_marginStart="@dimen/big_padding"
+                android:layout_marginEnd="@dimen/big_padding"
+                app:layout_constraintTop_toBottomOf="@id/qr_container"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:id="@+id/runs_title"
-            style="@style/TextAppearance.MaterialComponents.Headline5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/scheduled_runs"
-            android:textColor="@color/black"
-            android:layout_marginStart="@dimen/big_padding"
-            android:layout_marginTop="@dimen/big_padding"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/experiment_description"/>
+            </com.google.android.material.chip.ChipGroup>
 
-        <Button
-            android:id="@+id/add_run_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:paddingEnd="5dp"
-            android:paddingStart="12dp"
-            android:layout_gravity="end"
-            android:backgroundTint="@color/colorAccent"
-            android:layout_marginEnd="@dimen/big_padding"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/runs_title"
-            app:layout_constraintBottom_toBottomOf="@id/runs_title"
-            app:icon="@drawable/ic_baseline_add_24" />
+            <TextView
+                android:id="@+id/experiment_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/big_padding"
+                android:layout_marginTop="@dimen/big_padding"
+                android:layout_marginEnd="@dimen/big_padding"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tags" />
 
-        <View
-            android:id="@+id/separator"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"
-            android:layout_marginStart="@dimen/small_padding"
-            android:layout_marginEnd="@dimen/small_padding"
-            android:layout_marginTop="@dimen/small_padding"
-            app:layout_constraintTop_toBottomOf="@id/add_run_button"/>
+            <TextView
+                android:id="@+id/runs_title"
+                style="@style/TextAppearance.MaterialComponents.Headline5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/scheduled_runs"
+                android:textColor="@color/black"
+                android:layout_marginStart="@dimen/big_padding"
+                android:layout_marginTop="@dimen/big_padding"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/experiment_description"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/run_recyclerview"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/run_list_item"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/separator"
-            android:layout_marginTop="@dimen/small_padding"
-            android:layout_marginBottom="@dimen/small_padding" />
+            <Button
+                android:id="@+id/add_run_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:paddingEnd="5dp"
+                android:paddingStart="12dp"
+                android:layout_gravity="end"
+                android:backgroundTint="@color/colorAccent"
+                android:layout_marginEnd="@dimen/big_padding"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/runs_title"
+                app:layout_constraintBottom_toBottomOf="@id/runs_title"
+                app:icon="@drawable/ic_baseline_add_24" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+            <View
+                android:id="@+id/separator"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray"
+                android:layout_marginStart="@dimen/small_padding"
+                android:layout_marginEnd="@dimen/small_padding"
+                android:layout_marginTop="@dimen/small_padding"
+                app:layout_constraintTop_toBottomOf="@id/add_run_button"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/run_recyclerview"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/run_list_item"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/separator"
+                android:layout_marginTop="@dimen/small_padding"
+                android:layout_marginBottom="@dimen/small_padding" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
