--- a/DigiTriadLab/app/src/main/res/layout/activity_experiment_detail.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_experiment_detail.xml
@@ -13,11 +13,13 @@
         android:theme="@style/ToolbarTheme"
         app:liftOnScroll="true"
         >
-        <androidx.appcompat.widget.Toolbar
+
+        <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/top_toolbar"
-            android:layout_height="?attr/actionBarSize"
             android:layout_width="match_parent"
-            />
+            android:layout_height="?attr/actionBarSize"
+            app:menu="@menu/detail_experiment_menu"
+            app:title="@string/experiment_detail" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <ScrollView
