--- a/DigiTriadLab/app/src/main/res/layout/activity_run_detail.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_run_detail.xml
@@ -12,11 +12,12 @@
         android:theme="@style/ToolbarTheme"
         app:liftOnScroll="true"
         >
-        <androidx.appcompat.widget.Toolbar
+
+        <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/top_toolbar"
-            android:layout_height="?attr/actionBarSize"
             android:layout_width="match_parent"
-            />
+            android:layout_height="?attr/actionBarSize"
+            app:menu="@menu/detail_run_menu" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
