--- a/DigiTriadLab/app/src/main/res/menu/main_menu.xml
+++ b/DigiTriadLab/app/src/main/res/menu/main_menu.xml
@@ -2,6 +2,10 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:onClick="showAppInfo"
+        android:title="@string/about"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/device_button"
         android:icon="@drawable/ic_baseline_perm_device_information_24"
         android:iconTint="@color/white"
