--- a/DigiTriadLab/app/src/main/res/layout/activity_main.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
             android:id="@+id/top_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:labelVisibilityMode="labeled"
             app:menu="@menu/main_menu"
             app:title="@string/experiments" />
     </com.google.android.material.appbar.AppBarLayout>
@@ -28,17 +29,34 @@
         android:layout_height="wrap_content"
         tools:listitem="@layout/experiment_list_item" />
 
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottomAppBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:theme="@style/ToolbarTheme"
+
+        app:hideOnScroll="true"
+        app:fabAnimationMode="slide"
+        app:fabAlignmentMode="end"
+        app:fabCradleMargin="8dp"
+        app:fabCradleRoundedCornerRadius="@dimen/big_padding"
+        android:backgroundTint="@color/black"
+        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
+        app:menu="@menu/bottom_main_menu"
+        />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+        android:id="@+id/signInFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:backgroundTint="@color/colorAccent"
-        android:contentDescription="@string/add_experiment"
-        android:src="@drawable/ic_baseline_add_24"
-        android:layout_gravity="end|bottom"
-        app:layout_anchorGravity="bottom|right|end" />
+        android:backgroundTint="#FFFFFF"
+        android:contentDescription="@string/common_signin_button_text_long"
+        android:foregroundTint="@color/colorPrimary"
+        android:onClick="signIn"
+        android:src="@drawable/googleg_standard_color_18"
+        app:borderWidth="3dp"
+        app:layout_anchor="@id/bottomAppBar"
+        app:tint="@null" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
