--- a/DigiTriadLab/app/src/main/res/values/colors.xml
+++ b/DigiTriadLab/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorPrimary">#212121</color>
+    <color name="colorPrimaryDark">#101010</color>
     <color name="colorAccent">#4CAF50</color>
     <color name="red">#d50000</color>
     <color name="green">#00c853</color>
@@ -9,4 +9,6 @@
     <color name="white">#ffffff</color>
     <color name="black">#212121</color>
     <color name="grey">#757575</color>
+    <color name="red300">#E57373</color>
+    <color name="green300">#81C784</color>
 </resources>
