--- a/DigiTriadLab/app/src/main/res/layout/activity_main.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginBottom="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:listitem="@layout/experiment_list_item" />
