--- a/DigiTriadLab/app/src/main/res/layout/activity_run_detail.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_run_detail.xml
@@ -23,7 +23,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize">
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginBottom="?attr/actionBarSize">
 
         <ScrollView
             android:layout_width="match_parent"
