--- a/DigiTriadLab/app/src/main/res/menu/bottom_folder_picker.xml
+++ b/DigiTriadLab/app/src/main/res/menu/bottom_folder_picker.xml
@@ -7,10 +7,8 @@
         android:title="@string/sign_out"
         app:showAsAction="always" />
     <item
-        android:id="@+id/new_experiment"
-        android:icon="@drawable/ic_baseline_add_24"
-        android:title="@string/add_experiment"
+        android:id="@+id/new_folder"
+        android:icon="@drawable/ic_baseline_create_new_folder_24"
+        android:title="@string/add_folder"
         app:showAsAction="ifRoom" />
-
-
 </menu>
