--- a/DigiTriadLab/app/src/main/res/layout/activity_folder_picker.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_folder_picker.xml
@@ -107,15 +107,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/drives_progress_bar"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/parent_folder_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:paddingEnd="5dp"
+            android:paddingStart="12dp"
             android:layout_gravity="end"
             android:layout_marginEnd="@dimen/big_padding"
             android:backgroundTint="@color/colorAccent"
-            android:textColor="@color/white"
-            android:text="@string/go_back"
+            app:icon="@drawable/ic_baseline_reply_24"
             app:layout_constraintBottom_toBottomOf="@id/folders_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/folders_title" />
