--- a/DigiTriadLab/app/src/main/res/layout/activity_experiment_detail.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_experiment_detail.xml
@@ -115,7 +115,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/separator"
                 android:layout_marginTop="@dimen/small_padding"
-                android:layout_marginBottom="@dimen/small_padding" />
+                android:layout_marginBottom="?attr/actionBarSize" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
@@ -145,6 +145,7 @@
         android:foregroundTint="@color/colorPrimary"
         android:onClick="signIn"
         android:src="@drawable/googleg_standard_color_18"
+        app:hideOnScroll="true"
         app:borderWidth="3dp"
         app:layout_anchor="@id/bottomAppBar"
         app:tint="@null" />
